--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -54,7 +54,7 @@ help:
     - 'battledrones message {player} &7&l> &f/battledrones give controller <player> <range>'
     - 'battledrones message {player} &7&l> &f/battledrones sound <soundName> <world> <x> <y> <z> <volume> <pitch> <player - optional>'
     - 'battledrones message {player} &7&l> &f/battledrones actionbar <player> <seconds> <text>'
-    - 'battledrones message {player} &7&l> &f/battledrones cleanup <drones, projectiles, all> <stopDrone - optional>'
+    - 'battledrones message {player} &7&l> &f/battledrones prune <drones, projectiles, all> <stopDrone - optional>'
     - 'battledrones message {player} &7&l> &f/battledrones update'
     - 'battledrones message {player} &c&m---------------------------------------------'
 reload:
@@ -258,15 +258,15 @@ give:
       - 'battledrones message {player} &7[&dBattleDrones&7] &aAdded &6controller &ato &6{target}'
     number:
       - 'battledrones message {player} &7[&dBattleDrones&7] &cNot a number or the amount must be over 0!'
-cleanup:
+prune:
   permission:
     - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have access to use this command!'
   usage:
-    - 'battledrones message {player} &7[&dBattleDrones&7] &cUsage: /battledrones cleanup <drones, projectiles, all> <stopDrone - optional>'
+    - 'battledrones message {player} &7[&dBattleDrones&7] &cUsage: /battledrones prune <drones, projectiles, all> <stopDrone - optional>'
   remove:
     - 'battledrones message {player} &7[&dBattleDrones&7] &aRemoved &6{amount} &aentities'
   drone:
-    - 'battledrones message {target} &7[&dBattleDrones&7] &aYour &6{drone} &adrone has been caught in an CleanUP task, stopped by an admin.'
+    - 'battledrones message {target} &7[&dBattleDrones&7] &aYour &6{drone} &adrone has been caught in an prune task, stopped by an admin.'
 update:
   permission:
     - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have access to use this command!'
@@ -370,7 +370,7 @@ console:
       - '&7&l> &f/battledrones give controller <player> <range>'
       - '&7&l> &f/battledrones sound <soundName> <world> <x> <y> <z> <volume> <pitch> <player - optional>'
       - '&7&l> &f/battledrones actionbar <player> <seconds> <text>'
-      - '&7&l> &f/battledrones cleanup <drones, projectiles, all> <stopDrone - optional>'
+      - '&7&l> &f/battledrones prune <drones, projectiles, all> <stopDrone - optional>'
       - '&7&l> &f/battledrones update'
       - '&c&m---------------------------------------------'
   reload:
@@ -534,9 +534,9 @@ console:
         - '&7[&dBattleDrones&7] &aAdded &6controller &ato &6{target}'
       number:
         - '&7[&dBattleDrones&7] &cNot a number or the amount must be over 0!'
-  cleanup:
+  prune:
     usage:
-      - '&7[&dBattleDrones&7] &cUsage: /battledrones cleanup <drones, projectiles, all> <stopDrone - optional>'
+      - '&7[&dBattleDrones&7] &cUsage: /battledrones prune <drones, projectiles, all> <stopDrone - optional>'
     remove:
       - '&7[&dBattleDrones&7] &aRemoved &6{amount} &aentities'
 
