--- a/src/main/resources/drones/special/teleport.yml
+++ b/src/main/resources/drones/special/teleport.yml
@@ -54,6 +54,20 @@ dead:
   wear:
     - 'battledrones message {player} &7[&dBattleDrones&7] &cYour teleport drone was destroyed by wear and tear.'
 
+low-ammo:
+
+  # if player has 0% left warn the player!
+  0:
+    - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have any more ammo left.'
+
+  # if player has 10% left warn the player!
+  10:
+    - 'battledrones message {player} &7[&dBattleDrones&7] &cYou are low on ammo only 10% left.'
+
+  # if player has 50% left warn the player!
+  50:
+    - 'battledrones message {player} &7[&dBattleDrones&7] &cYou are low on ammo only 50% left.'
+
 gui:
 
   MAX-REACHED:
